support_tools/swigwin-3.0.12/Examples/test-suite/errors/pp_macro_missing_expression.i
// Test "Missing identifier for ..." errrors
%module xxx

#ifdef
#endif

#ifndef
#endif

#if
#endif

#if defined(AAA)
#elif
#endif


#define BBB

#if !defined(BBB)
#elif
#endif
